--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "async": "^2.6.0",
     "bitfinex-api-node": "^2.0.0-beta",
+    "fs-extra": "^5.0.0",
     "lodash": "^4.17.5"
   }
 }
